--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <div class="app-container">
-  <app-sidebar></app-sidebar>
+  <app-header></app-header>
+
   <main class="main-content">
     <router-outlet></router-outlet>
   </main>
+
+  <app-footer></app-footer>
 </div>
