--- a/src/app/sections/skills/skills.component.scss
+++ b/src/app/sections/skills/skills.component.scss
@@ -1,63 +1,3 @@
-//
-//
-//.skills {
-//  padding: 4rem 2rem;
-//  max-width: 1200px;
-//  margin: 0 auto;
-//
-//
-//  .section-title {
-//    text-align: center;
-//    font-size: 3rem;
-//    margin-bottom: 3rem;
-//    font-weight: bold;
-//  }
-//
-//  .skills-wrapper {
-//    display: grid;
-//    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-//    gap: 2rem;
-//  }
-//
-//  .skill-card {
-//    background: rgba(255, 255, 255, 0.05);
-//    padding: 1.5rem;
-//    border-radius: 10px;
-//    box-shadow: 0 0 10px rgba(0,0,0,0.15);
-//    transition: transform 0.3s ease;
-//
-//    &:hover {
-//      transform: translateY(-5px);
-//    }
-//
-//    .category-title {
-//      font-size: 1.5rem;
-//      margin-bottom: 1rem;
-//      border-bottom: 2px solid rgba(255, 255, 255, 0.1);
-//      padding-bottom: 0.5rem;
-//    }
-//
-//    .skill-list {
-//      list-style: none;
-//      padding: 0;
-//
-//      li {
-//        display: flex;
-//        align-items: center;
-//        margin: 0.5rem 0;
-//        font-size: 1rem;
-//
-//
-//        .skill-icon {
-//          margin-right: 0.5rem;
-//          color: #00aced;
-//        }
-//      }
-//    }
-//  }
-//}
-
-
 
 
 
@@ -82,8 +22,8 @@
 
     button {
       background: transparent;
-      border: 1px solid #1976d2;
-      color: #1976d2;
+      border: 1px solid #3f51b5;
+      color: #3f51b5;
       padding: 0.5rem 1.2rem;
       border-radius: 20px;
       font-weight: 500;
@@ -92,7 +32,7 @@
 
       &.active,
       &:hover {
-        background-color: #1976d2;
+        background-color: #3f51b5;
         color: white;
       }
     }
